@@ -1,3 +1,8 @@
+2001-12-02  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-value.h: put casts in the accessor macros, so they 
+	can accept void pointers. Doh.
+
 2001-11-26  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: version to 1.1.5
